@@ -14,6 +14,8 @@ class Storage(BaseStorage):
         """
         BaseStorage.__init__(self, cache_manager, options)
 
+        self._type = (int, long)
+        
         if 'unix_socket_path' in options:
             self.client = redis.Redis(unix_socket_path=options['unix_socket_path'])
         else:
@@ -28,15 +30,33 @@ class Storage(BaseStorage):
     def get(self, key):
         v = self.client.get(key)
         if v is not None:
-            return self._load(v)
+            if not v.isdigit():
+                return self._load(v)
+            else:
+                return int(v)
         else:
             raise KeyError, "Cache key [%s] not found" % key
     
     def set(self, key, value, expiry_time):
-        v =self._dump(value)
+        if not isinstance(value, self._type):
+            v = self._dump(value)
+        else:
+            v = value
         pipe = self.client.pipeline()
-        return pipe.set(key, v).expire(key, expiry_time).execute()
+        r = pipe.set(key, v).expire(key, expiry_time).execute()
+        return r[0]
     
     def delete(self, key):
         return self.client.delete(key)
+        
+    def inc(self, key, step, expiry_time):
+        pipe = self.client.pipeline()
+        r = pipe.incr(key, step).expire(key, expiry_time).execute()
+        return r[0]
+    
+    def dec(self, key, step, expiry_time):
+        pipe = self.client.pipeline()
+        r = pipe.decr(key, step).expire(key, expiry_time).execute()
+        return r[0]
+        
         
